--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
     "pages/my/my",
     "pages/cart/cart",
     "pages/classify/classify",
-    "pages/search/search"
+    "pages/search/search",
+    "pages/detail/detail"
   ],
   "window":{
     "backgroundTextStyle":"dark",
