完成了获取手机号，并通过后端解密后得到明文

--- a/project.config.json
+++ b/project.config.json
@@ -27,9 +27,9 @@
     "uploadWithSourceMap": true,
     "compileHotReLoad": false,
     "lazyloadPlaceholderEnable": false,
-    "useMultiFrameRuntime": false,
-    "useApiHook": false,
-    "useApiHostProcess": false,
+    "useMultiFrameRuntime": true,
+    "useApiHook": true,
+    "useApiHostProcess": true,
     "babelSetting": {
       "ignore": [],
       "disablePlugins": [],
@@ -48,7 +48,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wxc8244d5df4e7c7c9",
+  "appid": "wxc1b5e6fadc4b321a",
   "projectname": "WeIn",
   "debugOptions": {
     "hidedInDevtools": []
