完成加入购物车功能，修复购物车页面库存判断的bug
购物车页面的业务逻辑还存在一些问题

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -13,8 +13,8 @@
     "miniprogram": {
       "list": [
         {
-          "name": "pages/my/my",
-          "pathName": "pages/my/my",
+          "name": "pages/cart/cart",
+          "pathName": "pages/cart/cart",
           "query": "",
           "scene": null
         }
