--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
     "pages/classify/classify",
     "pages/search/search",
     "pages/detail/detail",
-    "pages/payment/payment"
+    "pages/payment/payment",
+    "pages/address/address"
   ],
   "window":{
     "backgroundTextStyle":"dark",
