完成了订单详情页面

--- a/app.json
+++ b/app.json
@@ -10,7 +10,9 @@
     "pages/payment/payment",
     "pages/address/address",
     "pages/createorder/createorder",
-    "pages/allorder/allorder"
+    "pages/allorder/allorder",
+    "pages/orderdetail/orderdetail",
+    "pages/orderwaitreceive/orderwaitreceive"
   ],
   "window": {
     "backgroundTextStyle": "dark",
